@@ -1,0 +1,5 @@
+
+ALTER TABLE server_performance ADD disk_reads MEDIUMINT(7);
+ALTER TABLE server_performance ADD disk_writes MEDIUMINT(7);
+
+UPDATE system_settings SET db_schema_version='1520',db_schema_update_date=NOW() where db_schema_version < 1520;
