@@ -47,6 +47,9 @@
   * Add upstream Rev. 2830:
     - admin.php: Moved user IP Lists permissions to new security section
         in Modify User page.
+  * Add upstream Rev. 2831:
+    - Some Database changes.
+  * New extras/mysql_update/mysql-1520.sql (2017-035).
 
 2.25.12
 
